@@ -14,6 +14,8 @@ rm -f $SERVER_STARTUP_FILE
 
 echo "Starting GDA. Output is being logged to $LOGFILE"
 
+export JAVA_OPTS="-Xms128m -Xmx1024m -XX:MaxPermSize=128m -XX:+DisableExplicitGC"
+
 nohup $GDAFOLDER/plugins/uk.ac.gda.core/bin/gda --config=$GDAFOLDER/$BEAMLINE-config --debug -p 8001 --restart -v --mode=$GDAMODE servers > $LOGFILE 2>&1 &
 
 echo "Looking for file $SERVER_STARTUP_FILE"
